--- a/src/app/feature/launchpad/launchpad.component.html
+++ b/src/app/feature/launchpad/launchpad.component.html
@@ -1,43 +1,44 @@
 <p>launchpad works!</p>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="full_name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let element">{{ element.full_name }}</td>
+  </ng-container>
 
-    
-  
+  <ng-container matColumnDef="region">
+    <th mat-header-cell *matHeaderCellDef>Region</th>
+    <td mat-cell *matCellDef="let element">{{ element.region }}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="full_name">
-      <th mat-header-cell *matHeaderCellDef> Name</th>
-      <td mat-cell *matCellDef="let element"> {{element.full_name}} </td>
-    </ng-container>
-  
+  <ng-container matColumnDef="wikipedia">
+    <th mat-header-cell *matHeaderCellDef>wikipedia</th>
+    <td mat-cell *matCellDef="let element">
+      <a [href]="element.wikipedia" target="_blank"> Click here</a>
+    </td>
+  </ng-container>
 
-    <ng-container matColumnDef="region">
-      <th mat-header-cell *matHeaderCellDef> Region </th>
-      <td mat-cell *matCellDef="let element"> {{element.region}} </td>
-    </ng-container>
-  
-
-    <ng-container matColumnDef="wikipedia">
-      <th mat-header-cell *matHeaderCellDef> wikipedia </th>
-      <td mat-cell *matCellDef="let element"> <a [href]="element.wikipedia" target="_blank"> Click here</a> </td>
-    </ng-container>
-
-    <!-- <ng-container matColumnDef="launches">
+  <!-- <ng-container matColumnDef="launches">
         <th mat-header-cell *matHeaderCellDef> Launches </th>
         <td mat-cell *matCellDef="let element">
 
             <span *ngIf="element.launches.length > 0; then launchesExist else noLaunches"></span>
-            <ng-template #launchesExist>{{ element.launches | launchNameMapper}}</ng-template>
+            <ng-template #launchesExist>{{ element.launches| slice: 50 | launchNameMapper   }}</ng-template>
             <ng-template #noLaunches> No launches for this launchpad</ng-template>
            
             </td>
       </ng-container> -->
-  
-    
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  
-  
-  
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+
+<mat-paginator
+  [length]="totalDocs"
+  [pageSize]="pageSize"
+  [showFirstLastButtons]="true"
+  (page)="handlePageEvent($event)"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  aria-label="Select page"
+>
+</mat-paginator>
