--- a/src/app/feature/launchpad/launchpad.component.html
+++ b/src/app/feature/launchpad/launchpad.component.html
@@ -1,6 +1,9 @@
-<p>launchpad works!</p>
-
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table
+  *ngIf="!isLoading"
+  mat-table
+  [dataSource]="dataSource"
+  class="mat-elevation-z8"
+>
   <ng-container matColumnDef="full_name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let element">{{ element.full_name }}</td>
@@ -34,11 +37,21 @@
 </table>
 
 <mat-paginator
+  *ngIf="!isLoading"
   [length]="totalDocs"
   [pageSize]="pageSize"
+  [pageIndex]="pageNumber - 1"
   [showFirstLastButtons]="true"
   (page)="handlePageEvent($event)"
   [pageSizeOptions]="[5, 10, 25, 100]"
   aria-label="Select page"
 >
 </mat-paginator>
+
+<mat-progress-spinner
+  *ngIf="isLoading"
+  class="example-margin"
+  [color]="'primary'"
+  [mode]="'indeterminate'"
+>
+</mat-progress-spinner>
