--- a/src/app/feature/launchpad/launchpad.component.html
+++ b/src/app/feature/launchpad/launchpad.component.html
@@ -21,16 +21,19 @@
     </td>
   </ng-container>
 
-  <!-- <ng-container matColumnDef="launches">
+  <ng-container matColumnDef="launches">
         <th mat-header-cell *matHeaderCellDef> Launches </th>
         <td mat-cell *matCellDef="let element">
 
             <span *ngIf="element.launches.length > 0; then launchesExist else noLaunches"></span>
-            <ng-template #launchesExist>{{ element.launches| slice: 50 | launchNameMapper   }}</ng-template>
+            <ng-template #launchesExist >{{ element.launches | launchNameMapper:showDetails   }}
+              <a class="showMore" (click)="showMore()">{{showDetails ? 'Show Less': "Show More"}}</a>
+             
+            </ng-template>
             <ng-template #noLaunches> No launches for this launchpad</ng-template>
            
             </td>
-      </ng-container> -->
+      </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
