--- a/src/app/feature/launchpad/launchpad.component.css
+++ b/src/app/feature/launchpad/launchpad.component.css
@@ -1,3 +1,9 @@
+.search-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 mat-progress-spinner {
   position: absolute;
   top: 20vh;
@@ -5,6 +11,11 @@ mat-progress-spinner {
 }
 
 .showMore {
-    color:blue;
-    cursor: pointer;
+  color: blue;
+  cursor: pointer;
+}
+
+mat-form-field,
+button {
+  margin: 0 4px;
 }
