--- a/src/app/feature/launchpad/launchpad.component.html
+++ b/src/app/feature/launchpad/launchpad.component.html
@@ -1,3 +1,26 @@
+<div class="search-bar">
+  <div>
+    <mat-form-field>
+      <mat-label>Search By Name</mat-label>
+      <input [(ngModel)]="queryName" matInput />
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Search By Region</mat-label>
+      <mat-select  [(ngModel)]="queryRegion">
+        <mat-option value="">No Selection</mat-option>
+        <mat-option *ngFor="let region of regionOptions" [value]="region">{{region}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <button mat-raised-button color="primary" (click)="search()">Search</button>
+
+    <button mat-raised-button color="warn" (click)="clear()">Clear</button>
+  </div>
+</div>
+
 <table
   *ngIf="!isLoading"
   mat-table
@@ -22,18 +45,20 @@
   </ng-container>
 
   <ng-container matColumnDef="launches">
-        <th mat-header-cell *matHeaderCellDef> Launches </th>
-        <td mat-cell *matCellDef="let element">
-
-            <span *ngIf="element.launches.length > 0; then launchesExist else noLaunches"></span>
-            <ng-template #launchesExist >{{ element.launches | launchNameMapper:showDetails   }}
-              <a class="showMore" (click)="showMore()">{{showDetails ? 'Show Less': "Show More"}}</a>
-             
-            </ng-template>
-            <ng-template #noLaunches> No launches for this launchpad</ng-template>
-           
-            </td>
-      </ng-container>
+    <th mat-header-cell *matHeaderCellDef>Launches</th>
+    <td mat-cell *matCellDef="let element">
+      <span
+        *ngIf="element.launches.length > 0; then launchesExist; else noLaunches"
+      ></span>
+      <ng-template #launchesExist
+        >{{ element.launches | launchNameMapper: showDetails }}
+        <a class="showMore" tabindex="1" (keydown)="showMore()" (click)="showMore()">{{
+          showDetails ? "Show Less" : "Show More"
+        }}</a>
+      </ng-template>
+      <ng-template #noLaunches> No launches for this launchpad</ng-template>
+    </td>
+  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
